--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
         "NODE_OPTIONS": "--dns-result-order=ipv4first"
     },
     "functions": {
-        "app/**/*.ts": {
-            "maxDuration": 30
+        "app/**/*": {
+            "maxDuration": 60
         }
     }
 }
