auth strategy and security

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,92 @@
-# Database
-DATABASE_URL="mongodb://your-mongodb-url"
+# QuizLock Environment Variables - SECURITY CONFIGURED + OAuth
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env to git!
 
-# NextAuth Configuration
-# For production (Vercel), set this to your actual domain
+# ====================
+# DATABASE
+# ====================
+DATABASE_URL="mongodb+srv://username:password@cluster.mongodb.net/quizlock?retryWrites=true&w=majority"
+
+# ====================
+# AUTHENTICATION & SECURITY
+# ====================
+# Base URL of your application
 NEXTAUTH_URL="http://localhost:3000"
+# In production: NEXTAUTH_URL="https://your-domain.com"
 
-# Generate a secret with: openssl rand -base64 32
-NEXTAUTH_SECRET="your-secret-here"
+# CRITICAL: Generate a strong, unique secret with: openssl rand -base64 32
+# This secret is used for JWT signing and CSRF protection
+# NEVER use the example value below in production!
+NEXTAUTH_SECRET="your-secret-here-CHANGE-THIS-IN-PRODUCTION"
+
+# ====================
+# OAUTH PROVIDERS (Optional)
+# ====================
+# Leave empty to disable specific providers
+# The app will automatically enable/disable providers based on these variables
+
+# Google OAuth
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+# 1. Create a new OAuth 2.0 Client ID
+# 2. Authorized redirect URIs: http://localhost:3000/api/auth/callback/google
+#    (In production: https://your-domain.com/api/auth/callback/google)
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# GitHub OAuth (Optional)
+# Get credentials from: https://github.com/settings/developers
+# 1. Create a new OAuth App
+# 2. Authorization callback URL: http://localhost:3000/api/auth/callback/github
+#    (In production: https://your-domain.com/api/auth/callback/github)
+GITHUB_CLIENT_ID="your-github-client-id"
+GITHUB_CLIENT_SECRET="your-github-client-secret"
+
+# Facebook OAuth (Future - not yet implemented)
+# FACEBOOK_CLIENT_ID="your-facebook-app-id"
+# FACEBOOK_CLIENT_SECRET="your-facebook-app-secret"
+
+# Microsoft OAuth (Future - not yet implemented)
+# MICROSOFT_CLIENT_ID="your-microsoft-client-id"
+# MICROSOFT_CLIENT_SECRET="your-microsoft-client-secret"
+
+# ====================
+# ENVIRONMENT
+# ====================
+NODE_ENV="development"
+# In production: NODE_ENV="production"
+
+# ====================
+# SETUP INSTRUCTIONS
+# ====================
+#
+# GOOGLE OAUTH SETUP:
+# 1. Go to https://console.cloud.google.com/apis/credentials
+# 2. Create a new project or select existing one
+# 3. Enable Google+ API
+# 4. Create OAuth 2.0 Client ID:
+#    - Application type: Web application
+#    - Authorized redirect URIs:
+#      * http://localhost:3000/api/auth/callback/google (development)
+#      * https://your-domain.com/api/auth/callback/google (production)
+# 5. Copy Client ID and Client Secret to this file
+#
+# GITHUB OAUTH SETUP:
+# 1. Go to https://github.com/settings/developers
+# 2. Click "New OAuth App"
+# 3. Fill in:
+#    - Application name: QuizLock
+#    - Homepage URL: http://localhost:3000
+#    - Authorization callback URL: http://localhost:3000/api/auth/callback/github
+# 4. Copy Client ID and Client Secret to this file
+#
+# ====================
+# SECURITY NOTES
+# ====================
+# 1. Generate NEXTAUTH_SECRET: openssl rand -base64 32
+# 2. Use strong MongoDB credentials
+# 3. Enable HTTPS in production
+# 4. Keep this file out of version control (.gitignore)
+# 5. Rotate secrets regularly
+# 6. Use environment-specific configurations
+# 7. OAuth secrets are sensitive - protect them like passwords
+# 8. Configure OAuth redirect URIs correctly for each environment
