--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "express-rate-limit": "^8.2.1",
     "framer-motion": "^12.23.24",
+    "helmet": "^8.1.0",
     "lucide-react": "^0.555.0",
     "mongoose": "^9.0.0",
+    "mongoose-sanitize": "^1.5.0",
     "next": "16.0.5",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
@@ -30,6 +33,7 @@
     "react-hook-form": "^7.66.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "validator": "^13.15.23",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -42,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/validator": "^13.15.10",
     "babel-plugin-react-compiler": "1.0.0",
     "dotenv": "^17.2.3",
     "eslint": "^9",
