--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-# QuizLock Environment Variables - SECURITY CONFIGURED + OAuth
+# Xkorin School Environment Variables - SECURITY CONFIGURED + OAuth
 # Copy this file to .env and fill in your actual values
 # NEVER commit .env to git!
 
 # ====================
 # DATABASE
 # ====================
-DATABASE_URL="mongodb+srv://username:password@cluster.mongodb.net/quizlock?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://username:password@cluster.mongodb.net/Xkorin School?retryWrites=true&w=majority"
 
 # ====================
 # AUTHENTICATION & SECURITY
@@ -74,7 +74,7 @@ NODE_ENV="development"
 # 1. Go to https://github.com/settings/developers
 # 2. Click "New OAuth App"
 # 3. Fill in:
-#    - Application name: QuizLock
+#    - Application name: Xkorin School
 #    - Homepage URL: http://localhost:3000
 #    - Authorization callback URL: http://localhost:3000/api/auth/callback/github
 # 4. Copy Client ID and Client Secret to this file
