--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@types/nodemailer": "^7.0.4",
+    "@types/xlsx": "^0.0.35",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
@@ -32,6 +34,7 @@
     "next": "16.0.5",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
@@ -39,6 +42,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "validator": "^13.15.23",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.13"
   },
   "devDependencies": {
