--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,23 @@ GITHUB_CLIENT_SECRET="your-github-client-secret"
 # MICROSOFT_CLIENT_SECRET="your-microsoft-client-secret"
 
 # ====================
+# REAL-TIME MESSAGING (Optional)
+# ====================
+# Ably is used for real-time chat and notifications
+# Get your API key from: https://ably.com/accounts/any/apps/any/app_keys
+# Leave empty to disable real-time features (polling will be used instead)
+#
+# SETUP INSTRUCTIONS:
+# 1. Sign up at https://ably.com (free tier available)
+# 2. Create a new app in your dashboard
+# 3. Go to "API Keys" tab
+# 4. Copy the "Root API Key" (format: appId.keyId:secret)
+# 5. Paste it below
+#
+# Example format: abc123.def456:ghi789jkl012mno345
+ABLY_API_KEY="your-ably-api-key"
+
+# ====================
 # ENVIRONMENT
 # ====================
 NODE_ENV="development"
