--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "lucide-react": "^0.555.0",
     "mongoose": "^9.0.0",
     "mongoose-sanitize": "^1.5.0",
-    "next": "16.0.5",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
