--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@types/nodemailer": "^7.0.4",
+    "@types/qrcode": "^1.5.6",
     "@types/xlsx": "^0.0.35",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "express-rate-limit": "^8.2.1",
+    "file-type": "^21.1.1",
     "framer-motion": "^12.23.24",
     "helmet": "^8.1.0",
     "lucide-react": "^0.555.0",
@@ -37,10 +39,12 @@
     "nodemailer": "^7.0.11",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
+    "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "recharts": "^3.5.1",
+    "sanitize-html": "^2.17.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "validator": "^13.15.23",
@@ -58,6 +62,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.16.0",
     "@types/validator": "^13.15.10",
     "babel-plugin-react-compiler": "1.0.0",
     "dotenv": "^17.2.3",
