--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@types/nodemailer": "^7.0.4",
     "@types/qrcode": "^1.5.6",
+    "@types/three": "^0.181.0",
     "@types/xlsx": "^0.0.35",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
@@ -45,8 +48,10 @@
     "react-hook-form": "^7.66.1",
     "recharts": "^3.5.1",
     "sanitize-html": "^2.17.0",
+    "simple-statistics": "^7.8.8",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.181.2",
     "validator": "^13.15.23",
     "xlsx": "^0.18.5",
     "zod": "^4.1.13"
